# full-stack-fastapi-nextjs-llm-template

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
fastapi_gen/: config.py  prompts.py
template/: cookiecutter.json
template/{{cookiecutter.project_slug}}/: .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.prod.yml
template/{{cookiecutter.project_slug}}/backend/app/agents/: assistant.py  langchain_assistant.py
template/{{cookiecutter.project_slug}}/backend/tests/: conftest.py  test_agents.py  test_commands.py  test_core.py
template/{{cookiecutter.project_slug}}/backend/tests/api/: test_exceptions.py  test_health.py
template/{{cookiecutter.project_slug}}/docs/: adding_features.md  architecture.md  patterns.md  testing.md
template/{{cookiecutter.project_slug}}/frontend/: README.md
template/{{cookiecutter.project_slug}}/frontend/src/components/chat/: chat-container.tsx
tests/: test_config.py  test_prompts.py  test_template_docs.py  test_template_integration.py
